feat(seats): add bulk seat creation with optimized batch insert
- Introduced SeatBulkCreateRequest DTO
- Implemented createSeatBulk service method
- Optimized seat creation to avoid N+1 queries
- Added duplicate seat filtering using in-memory lookup
- Enabled batch persistence using saveAll
- Evicted seat cache after bulk insert